...
                                    <constraint firstAttribute="width" secondItem="MBB-ka-4i1" secondAttribute="height" multiplier="80:20" id="UMs-qU-n54"/>
                                </constraints>
                                <state key="normal" title="Guardar">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="Rubik-Regular" family="Rubik" pointSize="16"/>
                                <state key="normal" title="Pagar">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                                                <nil key="highlightedColor"/>
                                                            </label>
                                                            <textField opaque="NO" clipsSubviews="YES" tag="21" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Nombre completo" textAlignment="natural" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="9Sc-Wt-d1q">
                                                                <rect key="frame" x="0.0" y="33" width="335" height="35"/>
                                                                <nil key="textColor"/>
...
                                                                </constraints>
                                                            </view>
                                                            <textField opaque="NO" clipsSubviews="YES" tag="22" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="1234 5678 9123 4567" textAlignment="natural" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="W9x-kA-gCw">
                                                                <rect key="frame" x="0.0" y="33" width="335" height="34.5"/>
                                                                <nil key="textColor"/>
...
                                                                        <nil key="highlightedColor"/>
                                                                    </label>
                                                                    <textField opaque="NO" clipsSubviews="YES" tag="23" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="01/30" textAlignment="natural" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="F0o-XK-7mK">
                                                                        <rect key="frame" x="0.0" y="18" width="141" height="35"/>
                                                                        <nil key="textColor"/>
...
                                                                        <nil key="highlightedColor"/>
                                                                    </label>
                                                                    <textField opaque="NO" clipsSubviews="YES" tag="24" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="123" textAlignment="natural" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="24v-E6-gM3">
                                                                        <rect key="frame" x="0.0" y="18" width="169" height="35"/>
                                                                        <nil key="textColor"/>
...
                                                    <color key="backgroundColor" red="0.72941176470000002" green="0.81568627449999997" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
                                                    <fontDescription key="fontDescription" name="Rubik-Medium" family="Rubik" pointSize="15"/>
                                                    <state key="normal" title="Agregar un nuevo medio de pago">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                    </state>
...
