...
                                                                <nil key="highlightedColor"/>
                                                            </label>
                                                            <textField opaque="NO" clipsSubviews="YES" tag="21" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Mi Casa" textAlignment="natural" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="DKa-C3-hRN">
                                                                <rect key="frame" x="-0.5" y="33" width="280" height="37"/>
                                                                <nil key="textColor"/>
...
                                                                <nil key="highlightedColor"/>
                                                            </label>
                                                            <textField opaque="NO" clipsSubviews="YES" tag="22" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Calle 100 # 7 - 0" textAlignment="natural" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="dyd-hE-Q5d">
                                                                <rect key="frame" x="-0.5" y="33" width="280" height="37"/>
                                                                <nil key="textColor"/>
...
                                                                        <nil key="highlightedColor"/>
                                                                    </label>
                                                                    <textField opaque="NO" clipsSubviews="YES" tag="24" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="401" textAlignment="center" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="0wx-OA-mdm">
                                                                        <rect key="frame" x="0.0" y="20" width="54.5" height="29"/>
                                                                        <nil key="textColor"/>
...
                                                                                </constraints>
                                                                            </view>
                                                                            <textField opaque="NO" clipsSubviews="YES" tag="25" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="143 m2" textAlignment="center" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="X79-yp-v1K">
                                                                                <rect key="frame" x="-0.5" y="18" width="103.5" height="36.5"/>
                                                                                <nil key="textColor"/>
...
                                                        <rect key="frame" x="0.0" y="304" width="280" height="76"/>
                                                        <subviews>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Clave WiFi" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hKt-aQ-W
                                                                <rect key="frame" x="-0.5" y="15" width="280" height="10"/>
                                                                <constraints>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="Rubik-Regular" family="Rubik" pointSize="18"/>
                                <state key="normal" title="Continuar">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
