...
                                <rect key="frame" x="31" y="582" width="313" height="40"/>
                                <color key="backgroundColor" red="0.72941176470000002" green="0.81568627449999997" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="mex-y0-HwQ"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Rubik-Medium" family="Rubik" pointSize="18"/>
                                <state key="normal" title="Listo">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="done:" destination="9Eh-ij-nWy" eventType="touchUpInside" id="QCW-DH-QBr"/>
                                </connections>
                            </button>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Historial" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="wmr-j0-1eo">
                                                <rect key="frame" x="192.5" y="0.0" width="86.5" height="25"/>
                                                <fontDescription key="fontDescription" name="Rubik-Regular" family="Rubik" pointSize="12"/>
                                                <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Perfil" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="bAM-Ua-yRT">
                                                <rect key="frame" x="289" y="0.0" width="86" height="25"/>
                                                <fontDescription key="fontDescription" name="Rubik-Regular" family="Rubik" pointSize="12"/>
                                                <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ajI-iV-XtC">
                                                    <rect key="frame" x="23" y="16" width="297" height="48"/>
                                                    <color key="backgroundColor" red="0.72941176470000002" green="0.81568627449999997" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
                                                    <fontDescription key="fontDescription" name="Rubik-Medium" family="Rubik" pointSize="18"/>
                                                    <state key="normal" title="Agregar una nueva dirección">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                    </state>
                                                </button>
                                            </subviews>
                                            <constraints>
                                                <constraint firstAttribute="bottomMargin" secondItem="ajI-iV-XtC" secondAttribute="bottom" constant="5" id="66a-vW-CUv"/>
...
                                                <rect key="frame" x="40" y="525.5" width="295" height="40"/>
                                                <color key="backgroundColor" red="0.72941176470000002" green="0.81568627449999997" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="C8j-th-doZ"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="Rubik-Medium" family="Rubik" pointSize="18"/>
                                                <state key="normal" title="Ver medios de pago">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
                                                <connections>
                                                    <action selector="showPayments:" destination="4ca-KH-YBa" eventType="touchUpInside" id="zlP-Xn-0xH"/>
                                                </connections>
                                            </button>
...
                                <rect key="frame" x="66" y="229.5" width="243" height="40"/>
                                <color key="backgroundColor" red="0.72941176470000002" green="0.81568627449999997" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="x39-vW-auh"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Rubik-Medium" family="Rubik" pointSize="18"/>
                                <state key="normal" title="Guardar Cambios">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="save:" destination="EXE-2d-MSJ" eventType="touchUpInside" id="Tjj-GI-a9g"/>
                                </connections>
                            </button>
...
