...
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconServiceBooked.png" translatesAutoresizingMaskIntoConstraints="NO" id="SrV-nz-do4">
                                <rect key="frame" x="66" y="170" width="243" height="100"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="100" id="4HV-3j-OhA"/>
                                </constraints>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¡Tu servicio ha sido agendado correctamente!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TSv-L7-
                                <rect key="frame" x="41" y="320" width="293" height="58.5"/>
                                <fontDescription key="fontDescription" name="Rubik-Light" family="Rubik" pointSize="25"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¡Gracias por usar Hometap!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UZT-xy-01H">
...
                                                <rect key="frame" x="50" y="667" width="275" height="40"/>
                                                <color key="backgroundColor" red="0.72941176470000002" green="0.81568627449999997" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="Viy-Gx-FxU"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="Rubik-Regular" family="Rubik" pointSize="20"/>
                                                <state key="normal" title="Confirmar Selección">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
                                                <connections>
                                                    <action selector="confirmBooking:" destination="3WP-Q7-uFE" eventType="touchUpInside" id="k9u-G6-waf"/>
                                                </connections>
                                            </button>
...
